@@ -4,6 +4,10 @@ Changes - Revision history for DashProfiler
 
 =head1 RELEASES
 
+=cut
+
+Measure overhead and subtract where appropriate, as far as possible, including from other.
+
 =head2 DashProfiler 1.04 - rXX - 2007
 
   Require 5.008, just due to sprintf '%$N' usage in tests.
